tests/parser-test-files/bad-files/define-instance.6.error
error: Malformed instance definition
  --> test:4:17
   |
 4 |  (define-instance 5)
   |                   ^ expected a list
